cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_26222_negative1.yaml
Resources:
# Ipv4 Samples
  Negative1_security_group_ipv4:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Open security group
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 2000  # not opening all ports
          ToPort: 2000
          CidrIp: 0.0.0.0/0
        - IpProtocol: "-1"
          FromPort: 2000
          ToPort: 2000
          CidrIp: 192.162.0.0/16  # cidr is not 0.0.0.0/0

  # Standalone IPv4 ingress rules
  Negative1_ingress_ipv4_1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative1_security_group_ipv4
      IpProtocol: "tcp"
      FromPort: 3000  # not opening all ports
      ToPort: 3000
      CidrIp: 0.0.0.0/0

  Negative1_ingress_ipv4_2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative1_security_group_ipv4
      IpProtocol: "tcp"
      FromPort: 0
      ToPort: 65535
      CidrIp: 192.162.0.0/16  # cidr is not 0.0.0.0/0

# Ipv6 Samples
  Negative1_security_group_ipv6:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Open security group
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 2000  # not opening all ports
          ToPort: 2000
          CidrIpv6: ::/0
        - IpProtocol: "-1"
          FromPort: 2000
          ToPort: 2000
          CidrIpv6: 2001:0db8::/32  # cidr is not ::/0

  # Standalone IPv6 ingress rules
  Negative1_ingress_ipv6_1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative1_security_group_ipv6
      IpProtocol: "tcp"
      FromPort: 4000  # not opening all ports
      ToPort: 4000
      CidrIpv6: ::/0

  Negative1_ingress_ipv6_2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative1_security_group_ipv6
      IpProtocol: "udp"
      FromPort: 0
      ToPort: 65535
      CidrIpv6: 2001:0db8::/32 # cidr is not ::/0
